crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@474.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_data VALUES (2, '-994877526002806872754342148749241.04353023451866590387054959174736129501310680280823383331007646306243540953499740615246583399296334239109936336446284803020643582102868247857009494139535009572740621288230740389545481395');"
---
InsertStmt@0..256
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "num_data"
  Whitespace@20..21 " "
  SelectStmt@21..254
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..254
      AConst@29..30
        Iconst@29..30 "2"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..254
        Sconst@32..254 "'-9948775260028068727 ..."
  Ascii41@254..255 ")"
  Ascii59@255..256 ";"

