crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@476.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_data VALUES (4, '5329378275943663322215245.24931765987630429629836382184742348353920297283690739124220773955591340709935970062776650204659187764581615597720798385015942389765692769739983054442503547211560297249686289665792078548480268091496050883021187158502798880896590227542729659940394038802461081290690995869705131152889309663639310553909874081663091069118126221594338242710530718836025225507189149221049928936955230868771875644038572888630664890573507822342998964954667474300944699078658989010257103569231493090050659723450626338923049035040974032671138430612839043269997482582763267536489504794826476836323549796385028155416935072959933315468068930689064483178204550825728947252440604703474049780550458442808479096492346910001692358508618202898514895453589357');"
---
InsertStmt@0..784
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "num_data"
  Whitespace@20..21 " "
  SelectStmt@21..782
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..782
      AConst@29..30
        Iconst@29..30 "4"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..782
        Sconst@32..782 "'53293782759436633222 ..."
  Ascii41@782..783 ")"
  Ascii59@783..784 ";"

