crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@477.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_data VALUES (5, '-652755630.43456071828048833552593835051449845484289562110789582081210403487973096161149072377955192388469356112505543620695003436531392789029513380101663750625024853263344909355177280161504414335005574882649025508632900995595004153086358670541462762210415346958050909878501048483523600711486406055424807840429541335391538322886495085448421556770991545781035298449067051916630343957356635391594362639819978677032855590055900561501350354631803808000307050416047072513406855040715556454205065332997338225626635780147287003130754254277103928406089109802521803537038957372612837169223905290912251006321930223154562110264217937');"
---
InsertStmt@0..658
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "num_data"
  Whitespace@20..21 " "
  SelectStmt@21..656
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..656
      AConst@29..30
        Iconst@29..30 "5"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..656
        Sconst@32..656 "'-652755630.434560718 ..."
  Ascii41@656..657 ")"
  Ascii59@657..658 ";"

